tests/src/frontend/typechecking/invalid/async_mut_3.sk
mutable class X(mutable x: Int)
async fun no(mutable X): ^void {
  void
}
